	* Added a 'timezone' parameter to the 'WHCgiPost::sendNtpCommand()'
	method in 'src/wh/whcgipost.cpp' and 'src/wh/whcgipost.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'WHCgiPost:: ntpAddress()' method in
	'wh/whcgipost.cpp'.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'IP' webroot command to specify interface by number
	rather than by name.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'NTP' webroot command to allow hostnames to be
	used as arguments.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'WHCgiApplication' class to allow for proper ordering
	of menu items.
2015-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked menu layout in 'src/wh/whcgiapplication.cpp'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'exit()' method from the 'WHCgiPage' class to
	'WHCgiApplication'.
	* Created a 'cgiapp' global variable in 'src/wh/whcgiapplication.cpp'
	and 'src/wh/whcgiapplication.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/webhostd/upgrade.cpp' to kill the service
	command process after applying the upgrade.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiApplication::redirect()' method in
	'src/wh/whcgiapplication.cpp' and ''src/wh/whcgiapplication.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiObject' class in 'wh/whcgiobject.cpp' and
	'wh/whcgiobject.h'.
2015-12-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'getValue()' methods in 'WHCgiPost' to return default
	values when the requested CGI variable was not found.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Removed extraneous dependency for 'sy.pro' from 'src/wh/Makefile.am'.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.