@@ -1,0 +1,23 @@
+[Unit]
+Description=Webhost web environment
+After=network.target remote-fs.target nss-lookup.target
+#Documentation=man:httpd(8)
+#Documentation=man:apachectl(8)
+
+[Service]
+Type=simple
+EnvironmentFile=/etc/sysconfig/webhost
+ExecStart=@prefix@/sbin/webhostd
+#ExecReload=/usr/sbin/httpd $OPTIONS -k graceful
+#ExecStop=/bin/kill -WINCH ${MAINPID}
+# We want systemd to give httpd some time to finish gracefully, but still want
+# it to kill httpd after TimeoutStopSec if something went wrong during the
+# graceful stop. Normally, Systemd sends SIGTERM signal right after the
+# ExecStop, which would kill httpd. We are sending useless SIGCONT here to give
+# httpd time to finish.
+#KillSignal=SIGCONT
+PrivateTmp=false
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
