@@ -96,3 +96,5 @@
 	* Removed extraneous dependency for 'sy.pro' from 'src/wh/Makefile.am'.
 2015-12-30 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.5.1.
+2015-12-31 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'webhost.service.in'.
